--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
   <title>CCMS</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link rel="preload" href="assets/css/adminlte.css" as="style" />
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/source-sans-3@5.0.12/index.css"/>
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/overlayscrollbars@2.11.0/styles/overlayscrollbars.min.css"
@@ -18,6 +16,8 @@
   <link rel="stylesheet" href="assets/css/adminlte.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/apexcharts@3.37.1/dist/apexcharts.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsvectormap@1.5.3/dist/css/jsvectormap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body class="layout-fixed sidebar-expand-lg sidebar-open bg-body-tertiary app-loaded">
     <app-root></app-root>
